// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fillDetails component should render V2 fill 1`] = `
<DocumentFragment>
  <dl
    class="fill-details__FillDetailList-sc-5nb7jb-0 mycsW"
  >
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Transaction Hash:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 gaobOX"
        href="https://etherscan.io/tx/0x68e018d2c97cf76af6bae65297e6f5b6bc9680b95b828bdea5eb03a0b36ebc77"
        rel="noreferrer noopener"
        target="_blank"
      >
        0x68e018d2c97cf76af6bae65297e6f5b6bc9680b95b828bdea5eb03a0b36ebc77
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Order Hash:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 gaobOX"
        href="/search?q=0x8104d4c4a32da7f1df357779fe6b8fc11dc6f4287de54566fe22eb35a74b0c71"
      >
        0x8104d4c4a32da7f1df357779fe6b8fc11dc6f4287de54566fe22eb35a74b0c71
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Sender Address:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 gaobOX"
        href="/search?q=0x0dc411b17d337af85d83ea5a3577d09132aae866"
      >
        0x0dc411b17d337af85d83ea5a3577d09132aae866
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Date:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      Thursday, October 10th 2019, 06:13:48 AM
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Relayer:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 gaobOX fill-relayer-link___StyledRelayerLink-sc-10d6xh4-0 eWOAxu"
        href="/relayers/radar-relay"
      >
        <img
          class="relayer-image___StyledImg-sc-1yudeg-0 hAjqat fill-relayer-link___StyledRelayerImage-sc-10d6xh4-1 uYhgP"
          src="https://0xtracker.com/assets/logos/radar-relay.png"
        />
        Radar Relay
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Status:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <span
        class="fill-status-label___StyledSpan-sc-1k6xas7-0 AGPjT badge badge-success"
      >
        successful
      </span>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      0x Protocol:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      v2
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Value:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <span>
        $184.29
      </span>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Maker:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 gaobOX"
        href="/traders/0x2cfb4faaece38d5d03ef1ec9dfdf34964d6ab1b3"
      >
        0x2cfb4faaece38d5d03ef1ec9dfdf34964d6ab1b3
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Taker:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 gaobOX"
        href="/traders/0x0dc411b17d337af85d83ea5a3577d09132aae866"
      >
        0x0dc411b17d337af85d83ea5a3577d09132aae866
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Maker Assets:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <ul
        class="list__List-sc-1hr42jb-0 cRmZyp"
      >
        <li
          class="list-item__Container-sc-1m8jbnt-0 kzXFZr"
        >
          <svg
            aria-hidden="true"
            class="sc-bdVaJa cjEDWs list-item___StyledCaretRightIcon-sc-1m8jbnt-1 dKkhXD"
            color="#9F9EB9"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 192 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
          <span>
            0.96955 
            <a
              class="link__StyledLink-sc-1m1n17q-0 gaobOX"
              href="/tokens/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2"
            >
              Wrapped Ether  (WETH)
            </a>
             
            <span
              class="asset-type-badge__AssetTypeBadge-sc-1ho1nac-0 ifWSro badge badge-dark"
            >
              ERC-20
            </span>
          </span>
        </li>
      </ul>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Taker Assets:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <ul
        class="list__List-sc-1hr42jb-0 cRmZyp"
      >
        <li
          class="list-item__Container-sc-1m8jbnt-0 kzXFZr"
        >
          <svg
            aria-hidden="true"
            class="sc-bdVaJa cjEDWs list-item___StyledCaretRightIcon-sc-1m8jbnt-1 dKkhXD"
            color="#9F9EB9"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 192 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
          <span>
            5,000 
            <a
              class="link__StyledLink-sc-1m1n17q-0 gaobOX"
              href="/tokens/0x4946fcea7c692606e8908002e55a582af44ac121"
            >
              FOAM Token  (FOAM)
            </a>
             
            <span
              class="asset-type-badge__AssetTypeBadge-sc-1ho1nac-0 ifWSro badge badge-dark"
            >
              ERC-20
            </span>
          </span>
        </li>
      </ul>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Derived Prices:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <ul
        class="list__List-sc-1hr42jb-0 cRmZyp"
      >
        <li
          class="list-item__Container-sc-1m8jbnt-0 kzXFZr"
        >
          <svg
            aria-hidden="true"
            class="sc-bdVaJa cjEDWs list-item___StyledCaretRightIcon-sc-1m8jbnt-1 dKkhXD"
            color="#9F9EB9"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 192 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
          <span>
            <a
              class="link__StyledLink-sc-1m1n17q-0 gaobOX"
              href="/tokens/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2"
            >
              Wrapped Ether  (WETH)
            </a>
            <span
              class="fill-details__PriceBadge-sc-5nb7jb-1 gmfFrK badge"
            >
              <span>
                $190.08
              </span>
            </span>
          </span>
        </li>
        <li
          class="list-item__Container-sc-1m8jbnt-0 kzXFZr"
        >
          <svg
            aria-hidden="true"
            class="sc-bdVaJa cjEDWs list-item___StyledCaretRightIcon-sc-1m8jbnt-1 dKkhXD"
            color="#9F9EB9"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 192 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
          <span>
            <a
              class="link__StyledLink-sc-1m1n17q-0 gaobOX"
              href="/tokens/0x4946fcea7c692606e8908002e55a582af44ac121"
            >
              FOAM Token  (FOAM)
            </a>
            <span
              class="fill-details__PriceBadge-sc-5nb7jb-1 gmfFrK badge"
            >
              <span>
                $0.0369
              </span>
            </span>
          </span>
        </li>
      </ul>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Maker Fee:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      None
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Taker Fee:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      None
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Fee Recipient:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 gaobOX"
        href="/search?q=0xa258b39954cef5cb142fd567a46cddb31a670124"
      >
        0xa258b39954cef5cb142fd567a46cddb31a670124
      </a>
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`fillDetails component should render V3 fill 1`] = `
<DocumentFragment>
  <dl
    class="fill-details__FillDetailList-sc-5nb7jb-0 mycsW"
  >
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Transaction Hash:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 gaobOX"
        href="https://etherscan.io/tx/0x68e018d2c97cf76af6bae65297e6f5b6bc9680b95b828bdea5eb03a0b36ebc77"
        rel="noreferrer noopener"
        target="_blank"
      >
        0x68e018d2c97cf76af6bae65297e6f5b6bc9680b95b828bdea5eb03a0b36ebc77
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Order Hash:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 gaobOX"
        href="/search?q=0x8104d4c4a32da7f1df357779fe6b8fc11dc6f4287de54566fe22eb35a74b0c71"
      >
        0x8104d4c4a32da7f1df357779fe6b8fc11dc6f4287de54566fe22eb35a74b0c71
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Sender Address:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 gaobOX"
        href="/search?q=0x0dc411b17d337af85d83ea5a3577d09132aae866"
      >
        0x0dc411b17d337af85d83ea5a3577d09132aae866
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Date:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      Thursday, October 10th 2019, 06:13:48 AM
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Relayer:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 gaobOX fill-relayer-link___StyledRelayerLink-sc-10d6xh4-0 eWOAxu"
        href="/relayers/radar-relay"
      >
        <img
          class="relayer-image___StyledImg-sc-1yudeg-0 hAjqat fill-relayer-link___StyledRelayerImage-sc-10d6xh4-1 uYhgP"
          src="https://0xtracker.com/assets/logos/radar-relay.png"
        />
        Radar Relay
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Status:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <span
        class="fill-status-label___StyledSpan-sc-1k6xas7-0 AGPjT badge badge-success"
      >
        successful
      </span>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      0x Protocol:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      v2
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Value:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <span>
        $184.29
      </span>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Maker:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 gaobOX"
        href="/traders/0x2cfb4faaece38d5d03ef1ec9dfdf34964d6ab1b3"
      >
        0x2cfb4faaece38d5d03ef1ec9dfdf34964d6ab1b3
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Taker:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 gaobOX"
        href="/traders/0x0dc411b17d337af85d83ea5a3577d09132aae866"
      >
        0x0dc411b17d337af85d83ea5a3577d09132aae866
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Maker Assets:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <ul
        class="list__List-sc-1hr42jb-0 cRmZyp"
      >
        <li
          class="list-item__Container-sc-1m8jbnt-0 kzXFZr"
        >
          <svg
            aria-hidden="true"
            class="sc-bdVaJa cjEDWs list-item___StyledCaretRightIcon-sc-1m8jbnt-1 dKkhXD"
            color="#9F9EB9"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 192 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
          <span>
            0.96955 
            <a
              class="link__StyledLink-sc-1m1n17q-0 gaobOX"
              href="/tokens/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2"
            >
              Wrapped Ether  (WETH)
            </a>
             
            <span
              class="asset-type-badge__AssetTypeBadge-sc-1ho1nac-0 ifWSro badge badge-dark"
            >
              ERC-20
            </span>
          </span>
        </li>
      </ul>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Taker Assets:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <ul
        class="list__List-sc-1hr42jb-0 cRmZyp"
      >
        <li
          class="list-item__Container-sc-1m8jbnt-0 kzXFZr"
        >
          <svg
            aria-hidden="true"
            class="sc-bdVaJa cjEDWs list-item___StyledCaretRightIcon-sc-1m8jbnt-1 dKkhXD"
            color="#9F9EB9"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 192 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
          <span>
            5,000 
            <a
              class="link__StyledLink-sc-1m1n17q-0 gaobOX"
              href="/tokens/0x4946fcea7c692606e8908002e55a582af44ac121"
            >
              FOAM Token  (FOAM)
            </a>
             
            <span
              class="asset-type-badge__AssetTypeBadge-sc-1ho1nac-0 ifWSro badge badge-dark"
            >
              ERC-20
            </span>
          </span>
        </li>
      </ul>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Derived Prices:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <ul
        class="list__List-sc-1hr42jb-0 cRmZyp"
      >
        <li
          class="list-item__Container-sc-1m8jbnt-0 kzXFZr"
        >
          <svg
            aria-hidden="true"
            class="sc-bdVaJa cjEDWs list-item___StyledCaretRightIcon-sc-1m8jbnt-1 dKkhXD"
            color="#9F9EB9"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 192 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
          <span>
            <a
              class="link__StyledLink-sc-1m1n17q-0 gaobOX"
              href="/tokens/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2"
            >
              Wrapped Ether  (WETH)
            </a>
            <span
              class="fill-details__PriceBadge-sc-5nb7jb-1 gmfFrK badge"
            >
              <span>
                $190.08
              </span>
            </span>
          </span>
        </li>
        <li
          class="list-item__Container-sc-1m8jbnt-0 kzXFZr"
        >
          <svg
            aria-hidden="true"
            class="sc-bdVaJa cjEDWs list-item___StyledCaretRightIcon-sc-1m8jbnt-1 dKkhXD"
            color="#9F9EB9"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 192 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
          <span>
            <a
              class="link__StyledLink-sc-1m1n17q-0 gaobOX"
              href="/tokens/0x4946fcea7c692606e8908002e55a582af44ac121"
            >
              FOAM Token  (FOAM)
            </a>
            <span
              class="fill-details__PriceBadge-sc-5nb7jb-1 gmfFrK badge"
            >
              <span>
                $0.0369
              </span>
            </span>
          </span>
        </li>
      </ul>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Fee Recipient:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 gaobOX"
        href="/search?q=0xa258b39954cef5cb142fd567a46cddb31a670124"
      >
        0xa258b39954cef5cb142fd567a46cddb31a670124
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpIcon-q3it9r-2 hAeehr"
        fill="currentColor"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm1 16h-2v-2h2v2zm.976-4.885c-.196.158-.385.309-.535.459-.408.407-.44.777-.441.793v.133h-2v-.167c0-.118.029-1.177 1.026-2.174.195-.195.437-.393.691-.599.734-.595 1.216-1.029 1.216-1.627a1.934 1.934 0 00-3.867.001h-2C8.066 7.765 9.831 6 12 6s3.934 1.765 3.934 3.934c0 1.597-1.179 2.55-1.958 3.181z"
        />
      </svg>
      Protocol Fee:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      0.0001 ETH
      <span
        class="fill-details__PriceBadge-sc-5nb7jb-1 gmfFrK badge"
      >
        <span>
          $0.2000
        </span>
      </span>
    </dd>
  </dl>
</DocumentFragment>
`;
